更改用户名称长度

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -23,14 +23,14 @@ a {
 a:hover {
 	text-decoration:none;
 }
-.el-cascader-menu {
-	min-width:120px !important;
-	.el-cascader-menu__wrap{
-		width: 100%;
-		overflow-x: hidden;
-		overflow-y: auto;
-		.el-cascader-node{
-			padding:0 5px;
-		}
-	}
-}
+// .el-cascader-menu {
+// 	min-width:120px !important;
+// 	.el-cascader-menu__wrap{
+// 		width: 100%;
+// 		overflow-x: hidden;
+// 		overflow-y: auto;
+// 		.el-cascader-node{
+// 			padding:0 5px;
+// 		}
+// 	}
+// }
