--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -2,7 +2,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	margin:0;
 	padding:0;
 }
-html,body{
+body{
 	height: 100%;
 	box-sizing: border-box;
 	font-size: 16px;
