完成分类分配接口对接

--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -2,10 +2,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	margin:0;
 	padding:0;
 }
-body{
+html,body,#app{
+	padding: 0px;
+	margin: 0px;
 	height: 100%;
-	box-sizing: border-box;
 	font-size: 16px;
+	.el-container{
+		min-height: calc(100%);
+	}
 }
 h1,h2,h3,h4,h5,h6,em,i {
 	font-weight:100;
