--- a/src/assets/css/globalVariable.less
+++ b/src/assets/css/globalVariable.less
@@ -25,6 +25,13 @@
     background: url("~@/assets/images/暂无产品.png") no-repeat center;
     background-size: 100%;
   }
+  .zanwuxinpin{
+    width: 400px;
+    height: 350px;
+    margin: 0 auto;
+    background: url("~@/assets/images/暂无新品.png") no-repeat center;
+    background-size: 100%;
+  }
   .zanwushuju{
     width: 500px;
     height: 500px;
