--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -11,6 +11,9 @@ html,body,#app{
 		min-height: calc(100%);
 	}
 }
+#app {
+	overflow: auto;
+}
 h1,h2,h3,h4,h5,h6,em,i {
 	font-weight:100;
 	font-style:normal;
