--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -32,6 +32,12 @@ a:hover {
 .el-select-dropdown__wrap{
 	max-height: 370px !important;
 }
+.menuItems{
+	.el-menu{
+		min-width: 120px;
+		overflow: auto;
+	}
+}
 // .el-cascader-menu {
 // 	min-width:120px !important;
 // 	.el-cascader-menu__wrap{
